--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-data-table-component": "^6.11.7",
+    "react-data-table-component-extensions": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
     "react-router": "^6.0.0-beta.0",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
